--- a/Site/Web2/css/estiloCadastro.css
+++ b/Site/Web2/css/estiloCadastro.css
@@ -102,22 +102,25 @@ body {
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
     #rodape{
-        bottom: unset;
+        bottom: 0;
         height: max-content;
     }
     .indiciplina {
-        height: max-content;
+        height: 80vh;
     }
 }
 
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 2559.98px){
     .indiciplina{
-        height: max-content;
-        padding-bottom: 10vh !important;
+        height: 80vh !important;
+        /* padding-bottom: 9rem; */
     }
     #rodape{
         bottom: 0;
+        height: max-content;
+    }
+    #c_blue{
         height: max-content;
     }
 }
