--- a/Site/Web2/css/estiloContaAdm.css
+++ b/Site/Web2/css/estiloContaAdm.css
@@ -217,7 +217,7 @@ h2 {
 
 @media (min-width: 768px) and (max-width: 991.98px) {
     .indiciplina {
-        height: max-content;
+        height: 80vh;
         padding-top: 5vh;
         padding-bottom: 8vh;
     }
