--- a/Site/Web2/css/estiloRankingAdm.css
+++ b/Site/Web2/css/estiloRankingAdm.css
@@ -141,6 +141,7 @@ label{
         bottom: unset;
         height: max-content !important;
         margin-top: 4vh !important;
+        
     }
 
     #rodape .col {
@@ -151,14 +152,12 @@ label{
         height: max-content;
         padding-top: 10vh;
         padding-bottom: 10vh;
+        
     }
     #sai{
         display: none;
     }
-    #clica{
-        width: 6vh;
-        height: 8vh;
-    }
+   
     
     #tipoLixo{
         border-right: none !important;
@@ -174,20 +173,20 @@ label{
         width: 5vh !important;
     }
     h2 {
-        font-size: 7vh !important;
+        font-size: 2rem !important;
     }
     #c_blue h1{
-        font-size: 10vh !important;
+        font-size: 3rem !important;
     }
     .table-responsive{
-        font-size: 5vh !important;
+        font-size: 1.5rem !important;
     }
     thead th{
-        border-width: 1vh !important; 
+        border-width: 0.3rem !important; 
     }
     
     label{
-        font-size: 4vh !important;
+        font-size: 1.5rem !important;
     }
     
 }
@@ -213,13 +212,15 @@ label{
     }
 
     #text_white {
-        width: 17rem !important;
-        height: 8rem !important;
+        width: 19rem !important;
+        height: 10rem !important;
     }
     #trp{
         margin: auto;
     }
-    
+    .table-responsive{
+        font-size: 1.5rem !important;
+    }
 }
 @media (min-width: 768px) and (max-width: 991.98px) and (max-height:575.98px){
     .indiciplina {
@@ -255,7 +256,9 @@ label{
         padding-bottom: 13vh;
          /* background-color: brown !important;  */
     }
-
+    #tipoLixo{
+        border-right: none !important;
+    }
     #rodape {
         bottom: unset;
         height: max-content;
@@ -265,7 +268,7 @@ label{
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
     .indiciplina {
-        height: max-content;
+        height: 83vh;
         padding-top: 5vh;
         padding-bottom: 10vh;
     }
@@ -291,9 +294,13 @@ label{
         margin-top: 1vh;
     }
     #rodape{
+        bottom: unset;
         height: max-content;
     }
     label{
+        font-size: 1.5rem !important;
+    }
+    .table-responsive{
         font-size: 1.5rem !important;
     }
 }
