--- a/Site/Web2/css/estiloLogin.css
+++ b/Site/Web2/css/estiloLogin.css
@@ -38,19 +38,20 @@ border-radius: 4px;
         padding-top: 10vh;
     }
     h1{
-        font-size: 3rem !important;
+        font-size: 2rem !important;
     }
     label{
         font-size: 1.5rem !important;
     }
     input,select{
-        font-size: 1.5rem !important;
+        font-size: 1rem !important;
     }
     .btn{
-        font-size: 1.5rem !important;
+        font-size: 1rem !important;
     }
     span{
         font-size: 1rem;
+        padding-bottom: 1rem;
     }
 }
 
@@ -67,16 +68,16 @@ border-radius: 4px;
         padding-top: 5vh;
     }
     h1{
-        font-size: 3rem !important;
+        font-size: 2.5rem !important;
     }
     label{
-        font-size: 1.5rem !important;
+        font-size: 1.3rem !important;
     }
     input,select{
-        font-size: 1.5rem !important;
+        font-size: 1.3rem !important;
     }
     .btn{
-        font-size: 1.5rem !important;
+        font-size: 1.3rem !important;
     }
     span{
         font-size: 1rem;
