--- a/Site/Web2/css/estiloColetaAdm.css
+++ b/Site/Web2/css/estiloColetaAdm.css
@@ -16,13 +16,10 @@ p{
 }
 
 h1 {
-    font-size: 3rem!important;
+    font-size: 3rem !important;
     text-align: center;
 }
 
-label{
-    font-size: 1.5rem !important;
-}
 
 #enviar{
     background-color: white !important;
@@ -36,10 +33,28 @@ label{
     color: #005FF9;
     font-style: italic;
 }
+
 #text_white{
     align-items: center;
     justify-content: center;
 }
+
+#inputData{
+    border-radius: 10px;
+    width: 10rem !important;
+    text-align: center;
+}
+
+#inputQtd{
+    border-radius: 10px;
+    width: 30rem !important;
+}
+
+#inputIF{
+    border-radius: 10px;
+    width: 50rem !important;
+}
+
 input, select, textarea{
     width: 40rem !important;
 }
